--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,12 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/editlaw?schema=publi
 
 GOOGLE_CLIENT_ID=691309983376-d6rrg6sbldd3ipji9nfmkpdfrvl3llfo.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+FRONTEND_URL=http://localhost:3000
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=oficialnilrow@gmail.com
+EMAIL_PASS=sndw yabf jurq qhxz
+EMAIL_FROM="Seu Nome <seu-email@dominio.com>"
+FRONTEND_URL=http://localhost:3000  
