--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^43.1.1",
+    "@ckeditor/ckeditor5-react": "^9.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tiptap/extension-heading": "^2.7.4",
+    "@tiptap/extension-image": "^2.7.4",
+    "@tiptap/extension-link": "^2.7.4",
+    "@tiptap/extension-placeholder": "^2.7.4",
+    "@tiptap/extension-table": "^2.7.4",
+    "@tiptap/extension-text-align": "^2.7.4",
+    "@tiptap/extension-underline": "^2.7.4",
+    "@tiptap/react": "^2.7.4",
+    "@tiptap/starter-kit": "^2.7.4",
+    "@types/formidable": "^3.4.5",
     "axios": "^1.7.7",
+    "ckeditor5-build-classic": "^1.0.0",
+    "docx-preview": "^0.3.2",
+    "dompurify": "^3.1.7",
+    "formidable": "^3.5.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
+    "konva": "^9.3.15",
+    "mammoth": "^1.8.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "rxjs": "^7.8.1"
+    "react-icons": "^5.3.0",
+    "react-konva": "^18.2.10",
+    "react-quill": "^2.0.0",
+    "rxjs": "^7.8.1",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/mdurl": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/use-sync-external-store": "^0.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "typescript": "^5"
