--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "react-konva": "^18.2.10",
     "react-quill": "^2.0.0",
     "rxjs": "^7.8.1",
-    "use-image": "^1.1.1"
+    "use-image": "^1.1.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
@@ -49,6 +50,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/use-sync-external-store": "^0.0.6",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "typescript": "^5"
