--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "mammoth": "^1.8.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-konva": "^18.2.10",
@@ -48,6 +49,7 @@
     "@types/mdurl": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "@types/use-sync-external-store": "^0.0.6",
     "@types/uuid": "^10.0.0",
