--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
     "konva": "^9.3.15",
+    "lodash.debounce": "^4.0.8",
     "mammoth": "^1.8.0",
     "next": "14.2.13",
     "react": "^18",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/mdurl": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
