--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "formidable": "^3.5.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "konva": "^9.3.15",
     "lodash.debounce": "^4.0.8",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash.debounce": "^4.0.9",
     "@types/mdurl": "^2.0.0",
     "@types/node": "^20",
