--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.7",
     "prisma": "^5.19.1",
     "ts-node": "^10.9.2",
