--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,10 +4,12 @@
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "include": ["src/**/*", "generateKey.js"],
   "exclude": ["node_modules", "dist"]
