--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-react": "^9.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mercadopago/sdk-react": "^0.0.19",
     "@tiptap/extension-heading": "^2.7.4",
     "@tiptap/extension-image": "^2.7.4",
     "@tiptap/extension-link": "^2.7.4",
