--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,10 +40,12 @@
     "next": "14.2.13",
     "react": "^18",
     "react-color": "^2.19.3",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-konva": "^18.2.10",
     "react-quill": "^2.0.0",
+    "react-use": "^17.5.1",
     "rxjs": "^7.8.1",
     "use-image": "^1.1.1",
     "uuid": "^10.0.0"
