--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,8 +45,10 @@
     "react-icons": "^5.3.0",
     "react-konva": "^18.2.10",
     "react-quill": "^2.0.0",
+    "react-slick": "^0.30.2",
     "react-use": "^17.5.1",
     "rxjs": "^7.8.1",
+    "slick-carousel": "^1.8.1",
     "use-image": "^1.1.1",
     "uuid": "^10.0.0"
   },
@@ -59,6 +61,7 @@
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/use-sync-external-store": "^0.0.6",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
