--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_API_URL=https://api.editlaw.com/api
+NEXT_PUBLIC_API_URL_IMAGE=https://api.editlaw.com/
+
+NEXT_PUBLIC_MP_PUBLIC_KEY=TEST-93ff93ff-695b-4de5-8c30-aec2f120ed10
+MP_ACCESS_TOKEN=TEST-5812941217018955-100414-6c144f1daf096fe88a4abec920e56e10-707830553
+
+NEXT_PUBLIC_EMAILJS_SERVICE_ID=service_0x50b3c
+NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=template_fabzj6d
+NEXT_PUBLIC_EMAILJS_USER_ID=Hy8lMdQjwpuTdSuzS
