--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^43.1.1",
     "@ckeditor/ckeditor5-react": "^9.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mercadopago/sdk-react": "^0.0.19",
@@ -28,6 +30,7 @@
     "ckeditor5-build-classic": "^1.0.0",
     "docx-preview": "^0.3.2",
     "dompurify": "^3.1.7",
+    "emailjs-com": "^3.2.0",
     "formidable": "^3.5.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
